; ModuleID = '/home/carl/AnghaBench/darwin-xnu/tests/extr_kqueue_file_tests.c_get_action_name.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/tests/extr_kqueue_file_tests.c_get_action_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"CREAT\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"MKDIR\00", align 1
@.str.2 = private unnamed_addr constant [5 x i8] c"READ\00", align 1
@.str.3 = private unnamed_addr constant [6 x i8] c"WRITE\00", align 1
@.str.4 = private unnamed_addr constant [8 x i8] c"WRITEFD\00", align 1
@.str.5 = private unnamed_addr constant [7 x i8] c"FILLFD\00", align 1
@.str.6 = private unnamed_addr constant [7 x i8] c"UNLINK\00", align 1
@.str.7 = private unnamed_addr constant [6 x i8] c"LSKEE\00", align 1
@.str.8 = private unnamed_addr constant [6 x i8] c"RMDIR\00", align 1
@.str.9 = private unnamed_addr constant [7 x i8] c"MKFIFO\00", align 1
@.str.10 = private unnamed_addr constant [9 x i8] c"LENGTHEN\00", align 1
@.str.11 = private unnamed_addr constant [6 x i8] c"TRUNC\00", align 1
@.str.12 = private unnamed_addr constant [8 x i8] c"SYMLINK\00", align 1
@.str.13 = private unnamed_addr constant [6 x i8] c"CHMOD\00", align 1
@.str.14 = private unnamed_addr constant [6 x i8] c"CHOWN\00", align 1
@.str.15 = private unnamed_addr constant [13 x i8] c"EXCHANGEDATA\00", align 1
@.str.16 = private unnamed_addr constant [7 x i8] c"RENAME\00", align 1
@.str.17 = private unnamed_addr constant [6 x i8] c"LSEEK\00", align 1
@.str.18 = private unnamed_addr constant [5 x i8] c"OPEN\00", align 1
@.str.19 = private unnamed_addr constant [5 x i8] c"MMAP\00", align 1
@.str.20 = private unnamed_addr constant [8 x i8] c"NOTHING\00", align 1
@.str.21 = private unnamed_addr constant [9 x i8] c"SETXATTR\00", align 1
@.str.22 = private unnamed_addr constant [7 x i8] c"UTIMES\00", align 1
@.str.23 = private unnamed_addr constant [5 x i8] c"STAT\00", align 1
@.str.24 = private unnamed_addr constant [9 x i8] c"HARDLINK\00", align 1
@.str.25 = private unnamed_addr constant [7 x i8] c"REVOKE\00", align 1
@.str.26 = private unnamed_addr constant [8 x i8] c"FUNLOCK\00", align 1
@.str.27 = private unnamed_addr constant [8 x i8] c"Unknown\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @get_action_name(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %32 [
    i32 152, label %5
    i32 144, label %6
    i32 139, label %7
    i32 129, label %8
    i32 128, label %9
    i32 150, label %10
    i32 131, label %11
    i32 145, label %12
    i32 136, label %13
    i32 143, label %14
    i32 147, label %15
    i32 132, label %16
    i32 133, label %17
    i32 154, label %18
    i32 153, label %19
    i32 151, label %20
    i32 138, label %21
    i32 146, label %22
    i32 140, label %23
    i32 142, label %24
    i32 141, label %25
    i32 135, label %26
    i32 130, label %27
    i32 134, label %28
    i32 148, label %29
    i32 137, label %30
    i32 149, label %31
  ]

5:                                                ; preds = %1
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %33

6:                                                ; preds = %1
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %33

7:                                                ; preds = %1
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0), i8** %2, align 8
  br label %33

8:                                                ; preds = %1
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.3, i64 0, i64 0), i8** %2, align 8
  br label %33

9:                                                ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.4, i64 0, i64 0), i8** %2, align 8
  br label %33

10:                                               ; preds = %1
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.5, i64 0, i64 0), i8** %2, align 8
  br label %33

11:                                               ; preds = %1
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.6, i64 0, i64 0), i8** %2, align 8
  br label %33

12:                                               ; preds = %1
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.7, i64 0, i64 0), i8** %2, align 8
  br label %33

13:                                               ; preds = %1
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.8, i64 0, i64 0), i8** %2, align 8
  br label %33

14:                                               ; preds = %1
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.9, i64 0, i64 0), i8** %2, align 8
  br label %33

15:                                               ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.10, i64 0, i64 0), i8** %2, align 8
  br label %33

16:                                               ; preds = %1
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.11, i64 0, i64 0), i8** %2, align 8
  br label %33

17:                                               ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.12, i64 0, i64 0), i8** %2, align 8
  br label %33

18:                                               ; preds = %1
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.13, i64 0, i64 0), i8** %2, align 8
  br label %33

19:                                               ; preds = %1
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.14, i64 0, i64 0), i8** %2, align 8
  br label %33

20:                                               ; preds = %1
  store i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.15, i64 0, i64 0), i8** %2, align 8
  br label %33

21:                                               ; preds = %1
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.16, i64 0, i64 0), i8** %2, align 8
  br label %33

22:                                               ; preds = %1
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.17, i64 0, i64 0), i8** %2, align 8
  br label %33

23:                                               ; preds = %1
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.18, i64 0, i64 0), i8** %2, align 8
  br label %33

24:                                               ; preds = %1
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.19, i64 0, i64 0), i8** %2, align 8
  br label %33

25:                                               ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.20, i64 0, i64 0), i8** %2, align 8
  br label %33

26:                                               ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.21, i64 0, i64 0), i8** %2, align 8
  br label %33

27:                                               ; preds = %1
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.22, i64 0, i64 0), i8** %2, align 8
  br label %33

28:                                               ; preds = %1
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.23, i64 0, i64 0), i8** %2, align 8
  br label %33

29:                                               ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.24, i64 0, i64 0), i8** %2, align 8
  br label %33

30:                                               ; preds = %1
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.25, i64 0, i64 0), i8** %2, align 8
  br label %33

31:                                               ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.26, i64 0, i64 0), i8** %2, align 8
  br label %33

32:                                               ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.27, i64 0, i64 0), i8** %2, align 8
  br label %33

33:                                               ; preds = %32, %31, %30, %29, %28, %27, %26, %25, %24, %23, %22, %21, %20, %19, %18, %17, %16, %15, %14, %13, %12, %11, %10, %9, %8, %7, %6, %5
  %34 = load i8*, i8** %2, align 8
  ret i8* %34
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
